Do not autoraise a window unless the mouse has been moved.

Fixes unintended autoraises when switching workspaces.

BUG: 306281
FIXED-IN: 4.9.2